--- a/src/libs/i18n/locales/en.json
+++ b/src/libs/i18n/locales/en.json
@@ -1,4 +1,16 @@
 {
+  "cars":{
+    "car_title": "Tiago1",
+    "car_model": "Tiago NRG",
+    "car_fuel_type": "Diesel",
+    "car_price": 632000,
+    "make_year": 2020,
+    "location": "Ahemdabad",
+    "avg_km": 30000,
+    "car_desc": "The Tata Tiago NRG has 1 Petrol Engine and 1 CNG Engine on offer. The Petrol engine is 1199 cc while the CNG engine is 1199 cc . It is available with Manual & Automatic transmission.Depending upon the variant and fuel type the Tiago NRG has a mileage of 20.09 kmpl to 26.49 km/kg & Ground clearance of Tiago NRG is 177. The Tiago NRG is a 5 seater 3 cylinder car",
+    "id": 1,
+    "carId": 11
+  },
   "message": {
     "title": "Card Title",
     "text": "Cake sesame snaps cupcake gingerbread danish I love gingerbread. Apple pie pie jujubes chupa chups muffin halvah lollipop. Chocolate cake oat cake tiramisu marzipan sugar plum. Donut sweet pie oat cake dragée fruitcake cotton candy lemon drops.",
